This is the Changelog for GregTech6-Unofficial
6.14.05: (Not released yet).
Nothing

6.14.04: (Not released yet).
Nothing

6.14.03: (Not released yet).
Nothing

6.14.02: (Not released yet).
[WIP]Draining Well. A Multiblock that drains liquid from underground.

6.14.01:
[NOTE] Do not use 6.14.00, it will crash the game.
[MERGED]Merged official branch 6.13.01
| 6.13.01:
| [FIXED] a Bug that crashes every single Crafting Recipe, sorry about that lol.
| [FIXED] Some Localisation Issues with Reika's Fluids, it should be fine now. It will work with all other Unlocalized Fluids too, so GT6 will display the most proper Fluid Name that it can display now.
| 6.13.00
| [NOTE] Sorry for letting this one take so long.
| [NOTE] I got a report that Riverwater, Swampwater and Oceanwater cannot be scanned with the Thaumometer, I can not replicate that Issue though, so I guess it is either fixed or something is wrong with their Modpack.
| [COMPAT] Netherite Plus got Compatibility now. It backports Netherite to 1.7.10. Soulfire Torch Placement by Tools, Record Shelving, Blackstone, Biomass, and the two Wood Types should all work in GregTech Stuff, also Netherite Ingots are made the Crucible way now instead of Crafting Debris with Gold Ingots. https://www.curseforge.com/minecraft/mc-mods/netheriteplus
| [FIXED] Seems like QwertTech might have messed up the Recipes for putting Planks in a Bathing Pot to get Treated Wood. This Issue might be fixed now for Vanilla Planks.
| [FIXED] The GT6 Axe was still slowed down on my end, when TreeCapitator was actually installed, resulting in a Double Slowdown.
| [FIXED] Heat Exchangers and Diesel Motors were wasting Fuel in certain Situations. Typically when they were operated while constantly out of Fuel.
| [FIXED] Failing to Load Save Files in Singleplayer when you already loaded another World before.
| [FIXED] Pam's Harvestcraft Fishtrap Bait Recipe for Mixing Bowl had a lower amount of Output than intended.